# diff_broker_message_source

./: .clang-format  .cmake-format.py  CMakeLists.txt  Config.cmake.in  README.md  build.sh
include/: MessageSource.h
src/: MessageSource.cpp  registerer.cpp
test/: CMakeLists.txt  TestMessageSource.cpp
